k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: lms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: lms-backend:latest
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "app.core.celery_app.celery_app", "worker", "--loglevel=info"]
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: uploads-volume
              mountPath: /app/uploads
          livenessProbe:
            exec:
              command: ["celery", "-A", "app.core.celery_app.celery_app", "inspect", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
      volumes:
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
